Fixed typos and grammar

--- a/PCA/PCA.ipynb
+++ b/PCA/PCA.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Principal component analysis\n",
     "\n",
-    "Principal component analysis (PCA) is a method of reducing the dimentionality of data while preserving important information and structure. It works by essentially fitting a multidimentional ellipsoid to the data and preserving the n most significant axes. PCA can be used on it's own to find patterns in data or to reduce the complexity of data for other models."
+    "Principal component analysis (PCA) reduces the dimensionality of data while preserving important information and structure. It fits a multidimensional ellipsoid to the data and preserves the n most significant axes. PCA can be used on its own to find patterns in data or reduce data complexity for other models."
    ]
   },
   {
@@ -19,24 +19,28 @@
     "\n",
     "### Normalization\n",
     "\n",
-    "Shift the mean of each column to zero and the standard deviation to one. This is required because different scales can provide undeserved weight to some features. For example measuring height and weight in kg and mm would likely give much larger values for height even if they vary together.\n",
+    "Shift the mean of each column to zero and the standard deviation to one. This is required because different scales can provide excessive weight to some features. For example, measuring height and weight in kg and mm would likely give much larger values for height, even if they vary together.\n",
     "\n",
-    "## [Singular value decomposition](https://en.wikipedia.org/wiki/Singular_value_decomposition)\n",
+    "## Covariance Matrix\n",
     "\n",
-    "Finding the multidimentional ellipsoid that fits the data is easy for a square covariance matrix. We could simply find the eigenvectors and and preserve the ones with the largest eigenvalues. For a non-square covariance matrix a more complex method like SVD gives the same results in singular vectors and values.\n",
+    "Take the covariance matrix of that data. This gives a representation of the relatedness of each feature.\n",
     "\n",
-    "## Dimensionality reduction\n",
+    "### [Singular value decomposition](https://en.wikipedia.org/wiki/Singular_value_decomposition)\n",
     "\n",
-    "Drop the smallest singular values and their associated vectors until the number of remaining dimentions is reached.\n",
+    "Finding the multidimensional ellipsoid that fits the data is easy for a square covariance matrix. We could find the eigenvectors and preserve the ones with the largest eigenvalues. For a non-square covariance matrix, a more complex method like SVD gives the same results in singular vectors and values.\n",
     "\n",
-    "## Projection\n",
+    "### Dimensionality reduction\n",
+    "\n",
+    "Drop the smallest singular values and their associated vectors until the remaining dimensions are reached.\n",
+    "\n",
+    "### Projection\n",
     "\n",
     "Project the data onto the new space given by the remaining singular vectors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,12 +87,12 @@
    "source": [
     "### Iris dataset\n",
     "\n",
-    "The iris dataset has four features but with PCA we can reduce the number to two while maintaining a significant amount of the structure."
+    "The iris dataset has four features, but we can reduce the number to two while maintaining a significant amount of the structure with PCA."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,20 +135,20 @@
    "source": [
     "### Handwritten digits\n",
     "\n",
-    "The digits dataset has points in $8*8$ space but only ten labels. With PCA we can reduce the dimentionallity significantly and run k-means faster."
+    "The digits dataset has points in $8*8$ space but only ten labels. With PCA, we can reduce the dimensionality significantly and run k-means faster."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KMeans with PCA: 1.5949241000053007\n",
-      "KMeans without PCA: 1.9872723000007682\n"
+      "KMeans with PCA: (s) 1.8666569999986677\n",
+      "KMeans without PCA: (s) 2.114620399996056\n"
      ]
     }
    ],
@@ -164,8 +168,9 @@
     "X_pca = pca(X, n_components=10)\n",
     "\n",
     "# Compare the performance of KMeans with and without PCA\n",
-    "print('KMeans with PCA:', timeit.timeit(lambda: KMeans(n_clusters=10, n_init='auto').fit(X_pca), number=100))\n",
-    "print('KMeans without PCA:', timeit.timeit(lambda: KMeans(n_clusters=10, n_init='auto').fit(X), number=100))\n"
+    "print('KMeans with PCA: (s)', timeit.timeit(lambda: KMeans(n_clusters=10, n_init='auto').fit(X_pca), number=100))\n",
+    "print('KMeans without PCA: (s)', timeit.timeit(lambda: KMeans(n_clusters=10, n_init='auto').fit(X), number=100))\n",
+    "\n"
    ]
   }
  ],
