--- a/Perceptron/perceptron.ipynb
+++ b/Perceptron/perceptron.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Perceptron\n",
     "\n",
-    "A perceptron is a binary classification model. It is used to distinguish two classes of linearly seperable points. The algorithm works by finding a hyperplane that can be placed between the two classes. It takes in input features and multiplies them by weights. The weighted inputs are then summed with an added bias. The output is the result of running an activation function on the weighted sum. \n",
+    "A perceptron is a binary classification model. It is used to distinguish two classes of linearly separable points. The algorithm works by finding a hyperplane that can be placed between the two classes. It takes in input features and multiplies them by weights. The weighted inputs are then summed with an added bias—the output results from running an activation function on the weighted sum. \n",
     "\n",
-    "The algorithm requires a set of training data, a learning rate hyperparameter, and an activation function."
+    "The algorithm requires a set of training data, a learning rate hyperparameter, and an activation function.\n"
    ]
   },
   {
@@ -21,11 +21,11 @@
     "\n",
     "## Initialization\n",
     "\n",
-    "The weights of each feature and the bias must be initialized. Some models initialize at zero for all and some use random values. Generally the bias is represented by adding a feature to all points that is always one. This means that the weight for that feature is the bias.\n",
+    "The weights of each feature and the bias must be initialized. Some models initialize at zero for all, and some use random values. Generally, the bias is represented by adding a feature to all points that is always one. This means that the weight for that feature is the bias.\n",
     "\n",
     "## Training\n",
     "\n",
-    "The weights and bias are trained on each training sample. There are three cases when training on a sample.\n",
+    "The weights and biases are trained on each training sample. There are three cases when training on a sample.\n",
     "\n",
     "- If the output was correct:\n",
     "  - No training needs to be done\n",
@@ -34,7 +34,7 @@
     "- If the output was a false negative:\n",
     "  - Increase the weights proportionally to the features\n",
     "\n",
-    "This can be done by simply adding the product of the input features and the (label - the output) to the current weights.\n"
+    "This can be done by simply adding the product of the input features and the (label - the output) to the current weights."
    ]
   },
   {
@@ -46,10 +46,10 @@
     "import numpy as np\n",
     "from typing import Callable\n",
     "\n",
-    "class Preceptron:\n",
-    "    \"\"\"A Preceptron is a single layer neural network that can be used for binary classification.\"\"\"\n",
+    "class Perceptron:\n",
+    "    \"\"\"A  is a single layer neural network that can be used for binary classification.\"\"\"\n",
     "    def __init__(self, input_size: int, activation: Callable[[np.ndarray], np.ndarray]) -> None:\n",
-    "        \"\"\"Initialize the Preceptron.\"\"\"\n",
+    "        \"\"\"Initialize the Perceptron.\"\"\"\n",
     "        # Initialize the weights to zeros with an extra weight for the bias.\n",
     "        self.W = np.zeros(input_size+1)\n",
     "        self.activation = activation\n",
@@ -110,7 +110,7 @@
    "source": [
     "## Activation functions\n",
     "\n",
-    "Below are a few common activation functions. They all have various strengths and weaknesses. The step function is commonly used for single-layer preceptrons while sigmoid is often used for multilayer-preceptrons that use gradient descent."
+    "Below are a few common activation functions. They all have various strengths and weaknesses. The step function is commonly used for single-layer perceptrons, while continuous functions are often used for multilayer perceptrons that use gradient descent."
    ]
   },
   {
@@ -155,7 +155,7 @@
    "source": [
     "## Data\n",
     "\n",
-    "The functions below generate two types of data. One is linearly seperable which is prefect for preceptrons. The other is non-linearly seperable which cannot be classified with a preceptron."
+    "The functions below generate two types of data. One is linearly separable, which is perfect for perceptrons. The other is non-linearly separable, which cannot be classified with a perceptron."
    ]
   },
   {
@@ -198,7 +198,7 @@
    "source": [
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "def plot_decision_boundary(model: Preceptron, X: np.ndarray, y: np.ndarray) -> None:\n",
+    "def plot_decision_boundary(model: Perceptron, X: np.ndarray, y: np.ndarray) -> None:\n",
     "    \"\"\"Plot the decision boundary of the model.\n",
     "    \n",
     "    Args:\n",
@@ -228,9 +228,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linearly seperable data\n",
+    "### Linearly separable data\n",
     "\n",
-    "Preceptrons can classify any data where you could draw a line between the two classes."
+    "Perceptrons can classify data where a line can be drawn that entirely separates the two classes."
    ]
   },
   {
@@ -260,17 +260,17 @@
     "# Generate data for a linearly separable problem.\n",
     "X, y = generate_data_ls()\n",
     "\n",
-    "# Create a preceptron with the step activation function.\n",
-    "preceptron = Preceptron(2, step)\n",
+    "# Create a perceptron with the step activation function.\n",
+    "perceptron = Perceptron(2, step)\n",
     "\n",
     "# Fit the model to the data.\n",
-    "preceptron.fit(X, y, max_epochs=1000, lr=0.5)\n",
+    "perceptron.fit(X, y, max_epochs=1000, lr=0.5)\n",
     "\n",
     "# Plot the data and the decision boundary.\n",
-    "plot_decision_boundary(preceptron, X, y)\n",
+    "plot_decision_boundary(perceptron, X, y)\n",
     "\n",
     "# Score the model on the data.\n",
-    "print(f\"Accuracy: {preceptron.score(X, y):.2f}\")"
+    "print(f\"Accuracy: {perceptron.score(X, y):.2f}\")"
    ]
   },
   {
@@ -278,9 +278,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Non-linearly seperable data\n",
+    "### Non-linearly separable data\n",
     "\n",
-    "A preceptron cannot classify non-convex data. To check if data is convex draw lines between all points and the other points in their class. If any of the lines of cross a line for the other class the data is non-convex."
+    "A perceptron cannot classify non-convex data. To check if data is convex, draw lines between all points and the other points in their class. If any of the lines cross a line for the other class, the data is non-convex."
    ]
   },
   {
@@ -310,17 +310,17 @@
     "# Generate data for a non-linearly separable problem.\n",
     "X, y = generate_data_nls()\n",
     "\n",
-    "# Create a preceptron with the step activation function.\n",
-    "preceptron = Preceptron(2, step)\n",
+    "# Create a perceptron with the step activation function.\n",
+    "perceptron = Perceptron(2, step)\n",
     "\n",
     "# Fit the model to the data.\n",
-    "preceptron.fit(X, y, max_epochs=1000, lr=0.5)\n",
+    "perceptron.fit(X, y, max_epochs=1000, lr=0.5)\n",
     "\n",
     "# Plot the data and the decision boundary.\n",
-    "plot_decision_boundary(preceptron, X, y)\n",
+    "plot_decision_boundary(perceptron, X, y)\n",
     "\n",
     "# Score the model on the data.\n",
-    "print(f\"Accuracy: {preceptron.score(X, y):.2f}\")"
+    "print(f\"Accuracy: {perceptron.score(X, y):.2f}\")"
    ]
   },
   {
@@ -328,9 +328,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiclass Preceptron\n",
+    "# Multiclass Perceptron\n",
     "\n",
-    "A multiclass preceptron can preform multiclass classification by splitting the work into multiple binary classifications. One method is to use the one vs rest method which creates a preceptron for each class that predicts if a sample is in that class or any of the others. If all the preceptrons are trained correctly, you can classify new data by finding the preceptron that classifies the point positively. For this method a continious activation function will provide better results since some edge cases may evaluate positivly for several of the classifers."
+    "A multiclass perceptron can perform multiclass classification by splitting the work into multiple binary classifications. One method is one vs rest, which creates a perceptron for each class that predicts if a sample is in that class or any others. If all the perceptrons are trained correctly, you can classify new data by finding the perceptron that classifies the point positively. For this method, a continuous activation function will provide better results since some edge cases may evaluate positively for several of the classifiers."
    ]
   },
   {
@@ -339,10 +339,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MulticlassPreceptron:\n",
-    "    \"\"\"A multiclass preceptron classifier using the one-vs-rest method.\"\"\"\n",
+    "class MulticlassPerceptron:\n",
+    "    \"\"\"A multiclass perceptron classifier using the one-vs-rest method.\"\"\"\n",
     "    def __init__(self, n_features: int, n_classes: int, activation: Callable[[np.ndarray], np.ndarray]) -> None:\n",
-    "        \"\"\"Create a multiclass preceptron.\n",
+    "        \"\"\"Create a multiclass perceptron.\n",
     "        \n",
     "        Args:\n",
     "            n_features: The number of features in the data.\n",
@@ -352,8 +352,8 @@
     "        self.n_features = n_features\n",
     "        self.n_classes = n_classes\n",
     "        self.activation = activation\n",
-    "        # Create a preceptron for each class vs rest.\n",
-    "        self.models = [Preceptron(n_features, activation) for _ in range(n_classes)]\n",
+    "        # Create a perceptron for each class vs rest.\n",
+    "        self.models = [Perceptron(n_features, activation) for _ in range(n_classes)]\n",
     "\n",
     "    @staticmethod\n",
     "    def _one_vs_rest(X: np.ndarray, y: np.ndarray, class_: int) -> tuple[np.ndarray, np.ndarray]:\n",
@@ -420,7 +420,7 @@
    "source": [
     "## Data\n",
     "\n",
-    "Multiclass preceptrons take data with any number of features exactly like a normal preceptron but can take any number of label classes as well."
+    "Multiclass perceptrons take data with any number of features precisely like a normal perceptron but can also take any number of label classes."
    ]
   },
   {
@@ -473,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_multiclass_decision_boundary(model: MulticlassPreceptron, X: np.ndarray, y: np.ndarray) -> None:\n",
+    "def plot_multiclass_decision_boundary(model: MulticlassPerceptron, X: np.ndarray, y: np.ndarray) -> None:\n",
     "    \"\"\"Plot the data and the decision boundary for a multiclass problem.\n",
     "    \n",
     "    Args:\n",
@@ -499,9 +499,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linearly seperable data\n",
+    "### Linearly separable data\n",
     "\n",
-    "The linearly seperable data can be classified with a multiclass preceptron."
+    "The linearly separable data can be classified with a multiclass perceptron."
    ]
   },
   {
@@ -531,17 +531,17 @@
     "# Generate data for a linearly separable multiclass problem.\n",
     "X, y = generate_multiclass_data_ls()\n",
     "\n",
-    "# Create a multiclass preceptron with the step activation function.\n",
-    "preceptron = MulticlassPreceptron(2, 4, logistic)\n",
+    "# Create a multiclass perceptron with the step activation function.\n",
+    "perceptron = MulticlassPerceptron(2, 4, logistic)\n",
     "\n",
     "# Fit the model to the data.\n",
-    "preceptron.fit(X, y, max_epochs=1000, lr=0.5)\n",
+    "perceptron.fit(X, y, max_epochs=1000, lr=0.5)\n",
     "\n",
     "# Plot the data and the decision boundary.\n",
-    "plot_multiclass_decision_boundary(preceptron, X, y)\n",
+    "plot_multiclass_decision_boundary(perceptron, X, y)\n",
     "\n",
     "# Score the model on the data.\n",
-    "print(f\"Accuracy: {preceptron.score(X, y):.2f}\")"
+    "print(f\"Accuracy: {perceptron.score(X, y):.2f}\")"
    ]
   },
   {
@@ -549,9 +549,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Non-linearly seperable data\n",
+    "### Non-linearly separable data\n",
     "\n",
-    "The multiclass case makes non-linearly seperable data even harder and the model is mostly useless."
+    "The multiclass case makes non-linearly separable data even harder, and the model is mostly useless."
    ]
   },
   {
@@ -581,17 +581,17 @@
     "# Generate data for a non-linearly separable multiclass problem.\n",
     "X, y = generate_multiclass_data_nls()\n",
     "\n",
-    "# Create a multiclass preceptron with the logistic activation function.\n",
-    "preceptron = MulticlassPreceptron(2, 4, logistic)\n",
+    "# Create a multiclass perceptron with the logistic activation function.\n",
+    "perceptron = MulticlassPerceptron(2, 4, logistic)\n",
     "\n",
     "# Fit the model to the data.\n",
-    "preceptron.fit(X, y, max_epochs=1000, lr=0.5)\n",
+    "perceptron.fit(X, y, max_epochs=1000, lr=0.5)\n",
     "\n",
     "# Plot the data and the decision boundary.\n",
-    "plot_multiclass_decision_boundary(preceptron, X, y)\n",
+    "plot_multiclass_decision_boundary(perceptron, X, y)\n",
     "\n",
     "# Score the model on the data.\n",
-    "print(f\"Accuracy: {preceptron.score(X, y):.2f}\")"
+    "print(f\"Accuracy: {perceptron.score(X, y):.2f}\")"
    ]
   }
  ],
@@ -611,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
